--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,17 @@ plugins:
   - blog
   - search
   - rss:
-      enabled: !ENV [CI, false]
+      enabled: true
+      feed_name: CodeTango
+      site_url: https://samgraham.github.io/codetango/
+      filename: rss.xml
+      path: blog/rss
+      copyright: Copyright (c) 2024 Sam Graham
+      author: Sam Grahm
+      description: A blog about software development
+      language: en
+      generator: false
+      include_self: false
       match_path: blog/posts/.*
       date_from_meta:
         as_creation: date
