--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,5 @@ jobs:
             mkdocs-material-
       - run: pip install -r requirements.txt 
       - run: mkdocs gh-deploy --force
+        env:
+          ENV: true
