--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
       - run: pip install -r requirements.txt 
       - run: mkdocs gh-deploy --force
         env:
-          ENV: true
+          CI: true
