--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           python-version: 3.x
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - run: echo "CI=true" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
@@ -27,5 +28,3 @@ jobs:
             mkdocs-material-
       - run: pip install -r requirements.txt 
       - run: mkdocs gh-deploy --force
-        env:
-          CI: true
