--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,40 @@
 Babel==2.15.0
+backrefs==6.1
+beautifulsoup4==4.14.3
 bracex==2.4
+CacheControl==0.14.4
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+csscompressor==0.9.5
+EditorConfig==0.17.1
+filelock==3.20.3
 ghp-import==2.1.0
 gitdb==4.0.11
 GitPython==3.1.43
+htmlmin2==0.1.13
 idna==3.7
 Jinja2==3.1.4
+jsbeautifier==1.15.4
+jsmin==3.0.1
 Markdown==3.6
 MarkupSafe==2.1.5
 mergedeep==1.3.4
 mkdocs==1.6.0
+mkdocs-blog-plugin==0.25
+mkdocs-bootswatch==1.1
 mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.24
 mkdocs-material-extensions==1.3.1
 mkdocs-mermaid2-plugin==1.1.1
+mkdocs-minify-plugin==0.8.0
 mkdocs-rss-plugin==1.12.2
+msgpack==1.1.2
 packaging==24.0
 paginate==0.5.6
 pathspec==0.12.1
+pip-review==1.3.0
 platformdirs==4.2.2
 Pygments==2.18.0
 pymdown-extensions==10.8.1
@@ -29,8 +43,11 @@ PyYAML==6.0.1
 pyyaml_env_tag==0.1
 regex==2024.5.15
 requests==2.32.2
+setuptools==81.0.0
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.8.3
+typing_extensions==4.15.0
 urllib3==2.2.1
 watchdog==4.0.1
 wcmatch==8.5.2
